--- a/trunk/Preguicoso2/war/WEB-INF/web.xml
+++ b/trunk/Preguicoso2/war/WEB-INF/web.xml
@@ -14,6 +14,7 @@
   <servlet-mapping>
     <servlet-name>loginServlet</servlet-name>
     <url-pattern>/preguicoso/login</url-pattern>
+     <url-pattern>/preguicoso2/login</url-pattern>
   </servlet-mapping>
  
   
@@ -25,6 +26,7 @@
   <servlet-mapping>
     <servlet-name>buscaServlet</servlet-name>
     <url-pattern>/preguicoso/busca</url-pattern>
+     <url-pattern>/preguicoso2/busca</url-pattern>
   </servlet-mapping>
   
   <servlet>
@@ -60,6 +62,7 @@
   <servlet-mapping>
     <servlet-name>AddRestaurantServlet</servlet-name>
     <url-pattern>/preguicoso/db</url-pattern>
+     <url-pattern>/preguicoso2/db</url-pattern>
   </servlet-mapping>
   
   <servlet>
@@ -70,6 +73,7 @@
   <servlet-mapping>
     <servlet-name>AddItemServlet</servlet-name>
     <url-pattern>/preguicoso/additem</url-pattern>
+     <url-pattern>/preguicoso2/additem</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
